tests/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.opentdf.local`)
      kind: Rule
      services:
        - name: platform-keycloak
          port: 80
          scheme: http
          passHostHeader: true
    - match: Host(`platform.opentdf.local`)
      kind: Rule
      services:
        - name: dsp-platform
          port: 9000
          scheme: h2c
          passHostHeader: true
    - match: Host(`tagging.opentdf.local`)
      kind: Rule
      services:
        - name: tagging-pdp
          port: 9000
          scheme: h2c
          passHostHeader: true
  tls:
    secretName: platform-tls
